[tests] Migrate more sbt project structure importing tests to the new running scheme part 4 #SCL-25852