@@ -1,11 +1,15 @@
 package org.jetbrains.sbt.project
 
+import com.intellij.openapi.projectRoots.ProjectJdkTable
 import com.intellij.openapi.roots.DependencyScope
 import com.intellij.openapi.util.io.FileUtil
 import com.intellij.pom.java.LanguageLevel
+import com.intellij.testFramework.IdeaTestUtil
+import org.jetbrains.annotations.Nullable
 import org.jetbrains.jps.model.java.{JavaResourceRootType, JavaSourceRootType}
-import org.jetbrains.plugins.scala.extensions.PathExt
+import org.jetbrains.plugins.scala.extensions.{PathExt, inWriteAction}
 import org.jetbrains.plugins.scala.project.ProjectExt
+import org.jetbrains.plugins.scala.project.external.JdkByName
 import org.jetbrains.sbt.project.ProjectStructureDsl.*
 import org.jetbrains.sbt.project.ProjectStructureTestUtils.expectedScalaSdkLibraryFromCoursier
 import org.jetbrains.sbt.project.runner.SbtProjectStructureImportingRunner
@@ -759,6 +763,413 @@ class SbtProjectStructureImportingTestCase_SimpleSbt128 extends SbtProjectStruct
     simpleSbtIvyBasedTest()
 
 @RunWith(classOf[SbtProjectStructureImportingRunner])
+class SbtProjectStructureImportingTestCase_SimpleSbt1313 extends SbtProjectStructureImportingTestCasesUtilities:
+  @Test
+  def simpleSbt1313(): Unit = {
+    val scalaLibraries = ProjectStructureTestUtils.expectedScalaLibraryWithScalaSdkForSbt(useEnv = true, buildReposOverridden = overrideBuildRepositories)("2.13.14")
+
+    runSimpleTest("simple", "2.13", scalaLibraries,
+      expectedSbtCompletionVariantsForParentModule = customSbtContentRootsForParent(13),
+      expectedSbtCompletionVariantsForMainModule = customSbtContentRootsForMain(13),
+      expectedSbtCompletionVariantsForTestModule = customSbtContentRootsForTest(13)
+    )
+
+    // Adding the assertion here not to create a separate heavy test for such a tiny check
+    // org.jetbrains.plugins.scala.project.ProjectExt#modulesWithScala
+    assertEquals(
+      "modulesWithScala should return list of non *-build modules",
+      Seq("simple.test", "simple.main"),
+      getMyProject.modulesWithScala.map(_.getName),
+    )
+
+    val expectedLineInProcessOutput = "[error] Some error message which shouldn't fail the whole build, see SCL-21478 and SCL-13038"
+    assertTrue(
+      s"Can't find this line in sbt process output during sbt structure extraction:\n$expectedLineInProcessOutput",
+      SbtProjectResolver.getProcessOutputOfLatestStructureDump.contains(expectedLineInProcessOutput)
+    )
+  }
+
+@RunWith(classOf[SbtProjectStructureImportingRunner])
+class SbtProjectStructureImportingTestCase_SimpleSbt149 extends SbtProjectStructureImportingTestCasesUtilities:
+  @Test
+  def simpleSbt149(): Unit = {
+    val scalaLibraries = ProjectStructureTestUtils.expectedScalaLibraryWithScalaSdkForSbt(useEnv = true, buildReposOverridden = overrideBuildRepositories)("2.13.14")
+
+    runSimpleTest("simple", "2.13", scalaLibraries,
+      expectedSbtCompletionVariantsForParentModule = DefaultSbtContentRootsScala213,
+      expectedSbtCompletionVariantsForMainModule = DefaultMainSbtContentRootsScala213,
+      expectedSbtCompletionVariantsForTestModule = DefaultTestSbtContentRootsScala213
+    )
+
+    // Adding the assertion here not to create a separate heavy test for such a tiny check
+    // org.jetbrains.plugins.scala.project.ProjectExt#modulesWithScala
+    assertEquals(
+      "modulesWithScala should return list of non *-build modules",
+      Seq("simple.test", "simple.main"),
+      getMyProject.modulesWithScala.map(_.getName),
+    )
+
+    val expectedLineInProcessOutput = "[error] Some error message which shouldn't fail the whole build, see SCL-21478 and SCL-13038"
+    assertTrue(
+      s"Can't find this line in sbt process output during sbt structure extraction:\n$expectedLineInProcessOutput",
+      SbtProjectResolver.getProcessOutputOfLatestStructureDump.contains(expectedLineInProcessOutput)
+    )
+  }
+
+@RunWith(classOf[SbtProjectStructureImportingRunner])
+class SbtProjectStructureImportingTestCase_SCL13600 extends SbtProjectStructureImportingTestCasesUtilities:
+  /**
+   * SCL-13600: generate all modules when there is a duplicate project id in the sbt build
+   * due to references to different builds, or multiple sbt projects being imported independently from IDEA
+   */
+  @Test
+  def SCL13600(): Unit = runTest(
+    new project("root") {
+      val buildURI: URI = getTestProjectPath.toCanonicalPath.toUri
+
+      val rootC1: module = new module("Build C1 Name") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("c1/")
+        moduleDependencies ++= Seq(
+          new dependency(rootC1Main) {
+            isExported := false
+          },
+          new dependency(rootC1Test) {
+            isExported := false
+          }
+        )
+      }
+      lazy val rootC1Main: module = new module("Build C1 Name.main") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("c1/")
+        moduleDependencies := Seq()
+      }
+      lazy val rootC1Test: module = new module("Build C1 Name.test") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("c1/")
+        moduleDependencies := Seq(rootC1Main)
+      }
+      val rootC2: module = new module("Build C2 Name") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("c2/")
+        moduleDependencies ++= Seq(
+          new dependency(rootC2Main) {
+            isExported := false
+          },
+          new dependency(rootC2Test) {
+            isExported := false
+          }
+        )
+      }
+      lazy val rootC2Main: module = new module("Build C2 Name.main") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("c2/")
+        moduleDependencies := Seq()
+      }
+      lazy val rootC2Test: module = new module("Build C2 Name.test") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("c2/")
+        moduleDependencies := Seq(rootC2Main)
+      }
+      val rootC3: module = new module("suffix2.root") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("prefix1/prefix2/c3/suffix1/suffix2/")
+        moduleDependencies ++= Seq(
+          new dependency(rootC3Main) {
+            isExported := false
+          },
+          new dependency(rootC3Test) {
+            isExported := false
+          }
+        )
+      }
+      lazy val rootC3Main: module = new module("suffix2.root.main") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("prefix1/prefix2/c3/suffix1/suffix2/")
+        moduleDependencies := Seq()
+      }
+      lazy val rootC3Test: module = new module("suffix2.root.test") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("prefix1/prefix2/c3/suffix1/suffix2/")
+        moduleDependencies := Seq(rootC3Main)
+      }
+      val rootC4: module = new module("suffix1.suffix2.root") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("prefix1/prefix2/c4/suffix1/suffix2/")
+        moduleDependencies ++= Seq(
+          new dependency(rootC4Main) {
+            isExported := false
+          },
+          new dependency(rootC4Test) {
+            isExported := false
+          }
+        )
+      }
+      lazy val rootC4Main: module = new module("suffix1.suffix2.root.main") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("prefix1/prefix2/c4/suffix1/suffix2/")
+        moduleDependencies := Seq()
+      }
+      lazy val rootC4Test: module = new module("suffix1.suffix2.root.test") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("prefix1/prefix2/c4/suffix1/suffix2/")
+        moduleDependencies := Seq(rootC4Main)
+      }
+      val root: module = new module("root") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI
+        moduleDependencies ++= Seq(
+          new dependency(rootMain) {
+            isExported := false
+          },
+          new dependency(rootTest) {
+            isExported := false
+          }
+        )
+      }
+      lazy val rootMain: module = new module("root.main") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI
+        moduleDependencies := Seq(
+          new dependency(rootC1Main) {isExported := false },
+          new dependency(rootC2Main) {isExported := false },
+          new dependency(rootC3Main) {isExported := false },
+          new dependency(rootC4Main) {isExported := false },
+        )
+      }
+      lazy val rootTest: module = new module("root.test") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI
+        moduleDependencies := Seq(
+          new dependency(rootMain) {isExported := false },
+          new dependency(rootC1Main) {isExported := false },
+          new dependency(rootC2Main) {isExported := false },
+          new dependency(rootC3Main) {isExported := false },
+          new dependency(rootC4Main) {isExported := false },
+        )
+      }
+
+      val modulesFromRoot: Seq[module] =
+        createModuleWithSourceSet("project1InRootBuild", Array("root")) ++
+          createModuleWithSourceSet("project2InRootBuild", Array("root")) ++
+          createModuleWithSourceSet("project3InRootBuildWithSameName", Array("root", "same name in root build")) ++
+          createModuleWithSourceSet("project4InRootBuildWithSameName", Array("root", "same name in root build")) ++
+          createModuleWithSourceSet("project5InRootBuildWithSameGlobalName", Array("root", "same global name")) ++
+          createModuleWithSourceSet("project6InRootBuildWithSameGlobalName", Array("root", "same global name"))
+
+      val modulesFromC1: Seq[module] =
+        Seq(rootC1,rootC1Main, rootC1Test) ++
+          createModuleWithSourceSet("project1InC1", Array("Build C1 Name")) ++
+          createModuleWithSourceSet("project2InC1", Array("Build C1 Name")) ++
+          createModuleWithSourceSet("project3InC1WithSameName", Array("Build C1 Name", "same name in c1")) ++
+          createModuleWithSourceSet("project4InC1WithSameName", Array("Build C1 Name", "same name in c1")) ++
+          createModuleWithSourceSet("project5InC1WithSameGlobalName", Array("Build C1 Name", "same global name")) ++
+          createModuleWithSourceSet("project6InC1WithSameGlobalName", Array("Build C1 Name", "same global name"))
+
+      val modulesFromC2: Seq[module] =
+        Seq(rootC2, rootC2Main, rootC2Test) ++
+          createModuleWithSourceSet("project1InC2", Array("Build C2 Name")) ++
+          createModuleWithSourceSet("project2InC2", Array("Build C2 Name")) ++
+          createModuleWithSourceSet("project3InC2WithSameName", Array("Build C2 Name", "same name in c2")) ++
+          createModuleWithSourceSet("project4InC2WithSameName", Array("Build C2 Name", "same name in c2")) ++
+          createModuleWithSourceSet("project5InC2WithSameGlobalName", Array("Build C2 Name", "same global name")) ++
+          createModuleWithSourceSet("project6InC2WithSameGlobalName", Array("Build C2 Name", "same global name"))
+
+      val modulesFromC3: Seq[module] =
+        Seq(rootC3, rootC3Main, rootC3Test) ++
+          createModuleWithSourceSet("project1InC3", Array("suffix2.root")) ++
+          createModuleWithSourceSet("project2InC3", Array("suffix2.root")) ++
+          createModuleWithSourceSet("project3InC3WithSameName", Array("suffix2.root", "same name in c3")) ++
+          createModuleWithSourceSet("project4InC3WithSameName", Array("suffix2.root", "same name in c3")) ++
+          createModuleWithSourceSet("project5InC3WithSameGlobalName", Array("suffix2.root", "same global name")) ++
+          createModuleWithSourceSet("project6InC3WithSameGlobalName", Array("suffix2.root", "same global name"))
+
+      val modulesFromC4: Seq[module] =
+        Seq(rootC4, rootC4Main, rootC4Test) ++
+          createModuleWithSourceSet("project1InC4", Array("suffix1.suffix2.root")) ++
+          createModuleWithSourceSet("project2InC4", Array("suffix1.suffix2.root")) ++
+          createModuleWithSourceSet("project3InC4WithSameName", Array("suffix1.suffix2.root", "same name in c4")) ++
+          createModuleWithSourceSet("project4InC4WithSameName", Array("suffix1.suffix2.root", "same name in c4")) ++
+          createModuleWithSourceSet("project5InC4WithSameGlobalName", Array("suffix1.suffix2.root", "same global name")) ++
+          createModuleWithSourceSet("project6InC4WithSameGlobalName", Array("suffix1.suffix2.root", "same global name"))
+
+
+      modules := Seq(root, rootMain, rootTest) ++:
+        modulesFromRoot ++:
+        modulesFromC1 ++:
+        modulesFromC2 ++:
+        modulesFromC3 ++:
+        modulesFromC4
+    }
+  )
+
+@RunWith(classOf[SbtProjectStructureImportingRunner])
+class SbtProjectStructureImportingTestCase_JavaLanguageLevelAndTargetByteCodeLevel extends SbtProjectStructureImportingTestCasesUtilities:
+  @Test
+  //noinspection TypeAnnotation
+  // SCL-16204, SCL-17597
+  def javaLanguageLevelAndTargetByteCodeLevel(): Unit = {
+    //overriding project jdk (configured in base test class)
+    val projectSdk9 = IdeaTestUtil.getMockJdk9
+    inWriteAction {
+      ProjectJdkTable.getInstance.addJdk(projectSdk9)
+    }
+    getCurrentExternalProjectSettings.jdk = projectSdk9.getName
+
+    //sbt can't be run with mock project JDK, so ensure it has normal SDK (configured in base test class)
+    setSbtSettingsCustomSdk(getJdkConfiguredForTestCase)
+
+    val projectName = "java-language-level-and-target-byte-code-level"
+    try runTest(
+      new project(projectName) {
+        // we expect no other options except -source -target --release or --enable-preview in this test
+        // these options are specially handled and saved in the dedicated settings, so we don't expect any extra javacOptions
+        javacOptions := Nil
+        sdk := JdkByName(projectSdk9.getName)
+
+        def moduleX(name: String, source: LanguageLevel, @Nullable target: String): module = new module(name) {
+          javaLanguageLevel := source
+          javaTargetBytecodeLevel := target
+          javacOptions := Nil
+          sdk := JdkByName(projectSdk9.getName)
+        }
+
+        def moduleXWithMainTestModules(name: String, source: LanguageLevel, @Nullable target: String): Seq[module] = {
+          Seq(
+            moduleX(name, sdkLanguageLevel, null),
+            moduleX(s"$name.main", source, target),
+            moduleX(s"$name.test", source, target)
+          )
+        }
+
+        val sdkLanguageLevel: LanguageLevel = LanguageLevel.JDK_1_9
+
+        val root = moduleXWithMainTestModules("java-language-level-and-target-byte-code-level", sdkLanguageLevel, null)
+
+        // Module naming: `source_target_release`
+        // `x` means option is missing
+        val module_x_x_x = moduleXWithMainTestModules(s"$projectName.module_x_x_x", sdkLanguageLevel, null)
+
+        val module_8_8_x   = moduleXWithMainTestModules(s"$projectName.module_8_8_x", LanguageLevel.JDK_1_8, "8")
+        val module_8_11_x  = moduleXWithMainTestModules(s"$projectName.module_8_11_x", LanguageLevel.JDK_1_8, "11")
+        val module_11_8_x  = moduleXWithMainTestModules(s"$projectName.module_11_8_x", LanguageLevel.JDK_11, "8")
+        val module_11_11_x = moduleXWithMainTestModules(s"$projectName.module_11_11_x", LanguageLevel.JDK_11, "11")
+
+        // no explicit target: javac will use source level by default
+        val module_8_x_x  = moduleXWithMainTestModules(s"$projectName.module_8_x_x", LanguageLevel.JDK_1_8, null)
+        val module_11_x_x = moduleXWithMainTestModules(s"$projectName.module_11_x_x", LanguageLevel.JDK_11, null)
+        val module_14_x_x = moduleXWithMainTestModules(s"$projectName.module_14_x_x", LanguageLevel.JDK_14, null)
+        val module_15_x_x = moduleXWithMainTestModules(s"$projectName.module_15_x_x", LanguageLevel.JDK_15, null)
+
+        val module_x_8_x  = moduleXWithMainTestModules(s"$projectName.module_x_8_x", sdkLanguageLevel, "8")
+        val module_x_11_x = moduleXWithMainTestModules(s"$projectName.module_x_11_x", sdkLanguageLevel, "11")
+
+        val module_x_x_8  = moduleXWithMainTestModules(s"$projectName.module_x_x_8", LanguageLevel.JDK_1_8, "8")
+        val module_x_x_11 = moduleXWithMainTestModules(s"$projectName.module_x_x_11", LanguageLevel.JDK_11, "11")
+
+        // Java preview features
+        // NOTE: IntelliJ API supports only 2 last preview versions of java language level (in com.intellij.pom.java.LanguageLevel)
+        // When a new version of Java releases and IDEA supports it, we should update this test
+        //
+        // no explicit target: javac will use source level by default
+        val module_8_x_x_preview  = moduleXWithMainTestModules(s"$projectName.module_8_x_x_preview", LanguageLevel.JDK_1_8, null) // no preview for Java 8
+        val module_11_x_x_preview = moduleXWithMainTestModules(s"$projectName.module_11_x_x_preview", LanguageLevel.JDK_11, null) // no preview for Java 11
+        val module_14_x_x_preview = moduleXWithMainTestModules(s"$projectName.module_14_x_x_preview", LanguageLevel.JDK_14, null) // no preview for Java 11
+        val module_20_x_x_preview = moduleXWithMainTestModules(s"$projectName.module_20_x_x_preview", LanguageLevel.JDK_20_PREVIEW, null)
+
+        val module_x_x_8_preview  = moduleXWithMainTestModules(s"$projectName.module_x_x_8_preview", LanguageLevel.JDK_1_8, "8")
+        val module_x_x_11_preview = moduleXWithMainTestModules(s"$projectName.module_x_x_11_preview", LanguageLevel.JDK_11, "11")
+        val module_x_x_14_preview = moduleXWithMainTestModules(s"$projectName.module_x_x_14_preview", LanguageLevel.JDK_14, "14")
+        val module_x_x_20_preview = moduleXWithMainTestModules(s"$projectName.module_x_x_20_preview", LanguageLevel.JDK_20_PREVIEW, "20")
+
+        modules :=
+          root ++
+            module_x_x_x ++
+            module_8_8_x ++ module_8_11_x ++ module_11_8_x ++ module_11_11_x ++
+            module_8_x_x ++ module_11_x_x ++ module_14_x_x ++ module_15_x_x ++
+            module_x_8_x ++ module_x_11_x ++
+            module_x_x_8 ++ module_x_x_11 ++
+            module_8_x_x_preview ++ module_11_x_x_preview ++ module_14_x_x_preview ++ module_20_x_x_preview ++
+            module_x_x_8_preview ++ module_x_x_11_preview ++ module_x_x_14_preview ++ module_x_x_20_preview
+
+      }
+    ) finally {
+      inWriteAction {
+        ProjectJdkTable.getInstance.removeJdk(projectSdk9)
+      }
+    }
+  }
+
+@RunWith(classOf[SbtProjectStructureImportingRunner])
+class SbtProjectStructureImportingTestCase_MultiBuildProjectWithSpecialCharactersInRootProjectNames extends SbtProjectStructureImportingTestCasesUtilities:
+  @Test
+  def multiBuildProjectWithSpecialCharactersInRootProjectNames(): Unit = runTest(
+    new project("ro//o/t\\") {
+      val buildURI: URI = getTestProjectPath.toCanonicalPath.toUri
+
+      val rootC1: module = new module("Build__1_N_ame") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("c1/")
+        moduleDependencies ++= Seq(
+          new dependency(rootC1Main) {
+            isExported := false
+          },
+          new dependency(rootC1Test) {
+            isExported := false
+          }
+        )
+      }
+      lazy val rootC1Main: module = new module("Build__1_N_ame.main") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("c1/")
+        moduleDependencies := Seq()
+      }
+      lazy val rootC1Test: module = new module("Build__1_N_ame.test") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI.resolve("c1/")
+        moduleDependencies := Seq(rootC1Main)
+      }
+      val root: module = new module("ro__o_t_") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI
+        moduleDependencies ++= Seq(
+          new dependency(rootMain) {
+            isExported := false
+          },
+          new dependency(rootTest) {
+            isExported := false
+          }
+        )
+      }
+      lazy val rootMain: module = new module("ro__o_t_.main") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI
+        moduleDependencies ++= Seq(
+          new dependency(rootC1Main) { isExported := false },
+        )
+      }
+      lazy val rootTest: module = new module("ro__o_t_.test") {
+        sbtProjectId := "root"
+        sbtBuildURI := buildURI
+        moduleDependencies ++= Seq(
+          new dependency(rootMain) { isExported := false },
+          new dependency(rootC1Main) { isExported := false }
+        )
+      }
+
+      val modulesRoot: Seq[module] =
+        Seq(root, rootMain, rootTest) ++
+          createModuleWithSourceSet("foo", Array("ro__o_t_"))
+
+      val modulesC1: Seq[module] =
+        Seq(rootC1, rootC1Main, rootC1Test) ++
+          createModuleWithSourceSet("foo", Array("Build__1_N_ame"))
+
+      modules := modulesRoot ++ modulesC1
+    }
+  )
+
+@RunWith(classOf[SbtProjectStructureImportingRunner])
 class SbtProjectStructureImportingTestCase_MultiBuildProjectWithTheSameProjectIdFromIDEAPerspective extends SbtProjectStructureImportingTestCasesUtilities:
   // SBT guarantees us that project ids inside builds are unique. In IDEA in the internal module name all "/" are replaced with "_" and it could happen that in one build
   // the name of one project would be e.g. ro/t and the other one would be ro_t and for SBT project ids uniqueness would be maintained but not for IDEA.
@@ -1501,7 +1912,7 @@ abstract class SbtProjectStructureImportingTestCasesUtilities extends SbtProject
     )
   }
 
-  private def customSbtContentRootsForParent(binaryVersion: Int): Seq[ExpectedDirectoryCompletionVariant] =
+  protected def customSbtContentRootsForParent(binaryVersion: Int): Seq[ExpectedDirectoryCompletionVariant] =
     Seq(
       ("src/main/java", JavaSourceRootType.SOURCE),
       ("src/main/scala", JavaSourceRootType.SOURCE),
@@ -1511,20 +1922,20 @@ abstract class SbtProjectStructureImportingTestCasesUtilities extends SbtProject
       (s"src/test/scala-2.$binaryVersion", JavaSourceRootType.TEST_SOURCE),
       ("src/main/resources", JavaResourceRootType.RESOURCE),
       ("src/test/resources", JavaResourceRootType.TEST_RESOURCE),
-    ).map(ExpectedDirectoryCompletionVariant.apply.tupled)
+    ).map(ExpectedDirectoryCompletionVariant.apply)
 
-  private def customSbtContentRootsForMain(binaryVersion: Int): Seq[ExpectedDirectoryCompletionVariant] =
+  protected def customSbtContentRootsForMain(binaryVersion: Int): Seq[ExpectedDirectoryCompletionVariant] =
     Seq(
       ("java", JavaSourceRootType.SOURCE),
       ("scala", JavaSourceRootType.SOURCE),
       (s"scala-2.$binaryVersion", JavaSourceRootType.SOURCE),
       ("resources", JavaResourceRootType.RESOURCE),
-    ).map(ExpectedDirectoryCompletionVariant.apply.tupled)
+    ).map(ExpectedDirectoryCompletionVariant.apply)
 
-  private def customSbtContentRootsForTest(binaryVersion: Int): Seq[ExpectedDirectoryCompletionVariant] =
+  protected def customSbtContentRootsForTest(binaryVersion: Int): Seq[ExpectedDirectoryCompletionVariant] =
     Seq(
       ("java", JavaSourceRootType.TEST_SOURCE),
       ("scala", JavaSourceRootType.TEST_SOURCE),
       (s"scala-2.$binaryVersion", JavaSourceRootType.TEST_SOURCE),
       ("resources", JavaResourceRootType.TEST_RESOURCE),
-    ).map(ExpectedDirectoryCompletionVariant.apply.tupled)
+    ).map(ExpectedDirectoryCompletionVariant.apply)
